--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+    <title>To Do Agi</title>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+</head>
+
+
+<body>
+    <h1>TO DO LIST</h1>
+    <div id="mainContainer">
+        <div id="myDIV" class="header">
+            <h2>LIST YOUR TASKS HERE</h2>
+            <input type="text" id="userInput" placeholder="Add your item...">
+            <span onclick="createListElement()" class="addButton"><button id="mainButton">Add task<button</span>
+        </div>
+        <div class="listContainer">
+        <ul id="taskList">
+            
+        </ul>   
+        <button onclick="taskRemover()" id='remover'>Delete Completed</button>
+    </div>
+        <script src="index.js" type="text/javascript"></script>
+    </div>
+</body>
+
+</html>
